<resources>
    <string name="app_name">Spotify Streamer</string>

    <string name="search_artists">Search artists</string>
    <string name="action_clear_search">Clear Search History</string>

    <string name="result_is_empty">The result is empty. Try to search with different artist name.</string>

    <string name="top_tracks_result_is_empty">There are no top tracks available for this artist.</string>

    <string name="title_activity_top_tracks_empty">No Top Tracks</string>
    <string name="title_activity_top_tracks_default">Top Tracks</string>
    <string name="title_activity_top_tracks_custom">Top %1$s Tracks</string>
    <string name="title_activity_top_one_track">Top 1 Track</string>


    <string name="thumbnail">Thumbnail</string>

    <string name="spotify_option_country">CA</string>
    <string name="enter_artist_label">Enter the artist name into the search box above.</string>

    <string name="artist_name">Artist Name</string>
    <string name="album_name">Album Name</string>
    <string name="album_artwork">Album Artwork</string>
    <string name="track_name">Track Name</string>
    <string name="time_zero">0:00</string>
    <string name="preview_mode">Preview Mode</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>

</resources>
